--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <h1>CSC104 Files</h1>
       <ul>
-        <li>Syllabus</li>
+        <li><a href="csc104-syllabus.html">Syllabus</a></li>
       </ul>
 
     </div>
