Add Week 1 Discussion Assignment section
Added a new section for the Week 1 Discussion Assignment, including prompts for students to introduce themselves and due dates for posts.

--- a/csc104-welcome.html
+++ b/csc104-welcome.html
@@ -73,6 +73,33 @@
                 </details>
             </section>
 
+            <!-- Discussion Assignment Section -->
+            <section class="mt-10" aria-labelledby="discussion-heading">
+                <h2 id="discussion-heading" class="text-2xl font-semibold mb-4">Week 1 Discussion: Introduce Yourself</h2>
+                <div class="bg-white p-6 rounded-lg shadow">
+                    <p class="mb-4 text-gray-700">Let's get to know each other! Please post a new thread introducing yourself to the class. In your post, please answer the following questions:</p>
+                    <a href="https://mendocino.instructure.com/courses/20138/discussion_topics/252791" 
+                       target="_blank" 
+                       rel="noopener noreferrer"
+                       class="inline-block bg-blue-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-blue-700 transition-colors mb-4 text-center">
+                        Go to Discussion Assignment
+                    </a>
+                    <ul class="list-disc list-inside mb-4 space-y-2 text-gray-700">
+                        <li>What is your name and your major?</li>
+                        <li>Why are you taking this course?</li>
+                        <li>What is your current experience level with computers (e.g., beginner, intermediate, advanced)?</li>
+                        <li>Share a fun fact about yourself!</li>
+                    </ul>
+                    <div class="mt-4 pt-4 border-t">
+                        <h3 class="font-semibold text-gray-800">Due Dates:</h3>
+                        <ul class="list-disc list-inside mt-2 space-y-2 text-gray-700">
+                            <li>Your initial introduction post is due by <strong class="text-red-700">Friday, September 5, 2025, at 11:59 PM</strong>.</li>
+                            <li>Respond to at least two of your classmates' posts by <strong class="text-red-700">Monday, September 8, 2025, at 11:59 PM</strong>.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
         </main>
         
         <!-- Footer -->
@@ -91,4 +118,5 @@
     </script>
 </body>
 </html>
+
 
