Add link to Welcome Page in index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h1>CSC104 Files</h1>
       <ul>
         <li><a href="csc104-syllabus.html">Syllabus</a></li>
+        <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
 
     </div>
