Replace video placeholder with YouTube embed
Updated the welcome video section to include a YouTube embed and revised the transcript content to reflect new information.

--- a/csc104-welcome.html
+++ b/csc104-welcome.html
@@ -29,18 +29,13 @@
 
         <!-- Main Content Section -->
         <main>
-            <!-- Video Placeholder Section -->
+            <!-- Video Section -->
             <section aria-labelledby="video-heading">
                 <h2 id="video-heading" class="text-2xl font-semibold mb-4">Welcome Video</h2>
                 
-                <!-- This div simulates an embedded video player -->
-                <div class="aspect-w-16 aspect-h-9 bg-black rounded-lg shadow-lg flex items-center justify-center">
-                    <div class="text-center text-white" aria-hidden="true">
-                        <!-- Play Icon -->
-                        <svg class="w-16 h-16 mx-auto" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd"></path></svg>
-                        <p class="mt-2 font-semibold">Video Coming Soon</p>
-                    </div>
-                    <span class="sr-only">A placeholder for the course welcome video, which is not yet available.</span>
+                <!-- Responsive YouTube Embed -->
+                <div class="aspect-w-16 aspect-h-9 w-full">
+                    <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/0MQKB17cNO4?si=BJdseVXYG3c3wnKq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
 
@@ -54,21 +49,106 @@
                         View Welcome Video Transcript
                     </summary>
                     <div class="mt-4 prose max-w-none text-gray-700">
-                        <p>
-                            [Speaker: Professor Smith]
-                        </p>
-                        <p>
-                            Hello everyone, and welcome to CSC104: Computers and Computer Applications. I'm Professor Smith, and I'll be your instructor for this course.
-                        </p>
-                        <p>
-                            Throughout this semester, we will explore the fundamental concepts of computing, how computers work, and how they impact our daily lives. We'll cover a range of topics from hardware and software basics to understanding the internet, cybersecurity, and the ethical implications of technology in modern society.
-                        </p>
-                        <p>
-                            This course is designed for students from all backgrounds, so no prior computer science experience is necessary. Our goal is to make you a more confident and competent user of technology. Please take a moment to review the syllabus, which you can find in the "Course Materials" section. I look forward to a great semester with all of you.
-                        </p>
-                        <p>
-                            [End of transcript]
-                        </p>
+                        <p>Aloha and welcome. This is CSC 104 Computers and Computer Applications.</p>
+                        <p>And I wanted to welcome you to class and just kind of orient you to everything and talk to you about what you need to get done this week, primarily.</p>
+                        <p>So the first thing I want to do is I'm going to cover the syllabus.</p>
+                        <p>And I have to admit that I'm a little bit behind, so I haven't really flushed everything out that I want to do and how that's going to work.</p>
+                        <p>But when I do, I will be updating the syllabus as we go and I'll let you know when it's finalized.</p>
+                        <p>If you want a hard copy, you can download the syllabus. You'll have to do it again since it's not quite finished.</p>
+                        <p>This is my contact information. My name is David Pai. I prefer to be called David.</p>
+                        <p>This is my email address, my office number, my office phone number.</p>
+                        <p>If you text me on the office phone number, it will show up on my computer, so I'll see it as well as on my phone.</p>
+                        <p>My office hours are Mondays and Wednesdays from 11 to 12. And that's both in person as well as via zoom.</p>
+                        <p>If you click on this link here, it'll take you to the zoom meeting.</p>
+                        <p>And then on Tuesdays and Thursdays from 1230 to two o'clock.</p>
+                        <p>And those are my online office hours.</p>
+                        <p>So just so that you know, I will be updating the syllabus as time goes on and let you know when it is finalized.</p>
+                        <p>One of the things I do want to point out is the textbook and other materials.</p>
+                        <p>I am using a free textbook called an open source textbook. And this is the link to it.</p>
+                        <p>You can read it online, but I also strongly suggest that you download the PDF version of the textbook to your computer.</p>
+                        <p>So let me go ahead and click on this so you can see what it looks like.</p>
+                        <p>So this is the textbook itself. And as I mentioned, it is available.</p>
+                        <p>You can read it here, but I do suggest that you go to the table of contents and download the book.</p>
+                        <p>Okay. So that will download the textbook.</p>
+                        <p>Let's go back to the syllabus. Oops. Wrong class.</p>
+                        <p>The other thing that you're going to be required to have is a computer with Microsoft office.</p>
+                        <p>And as a Mendocino college student, you can download and install a free copy of Microsoft Office to your computer.</p>
+                        <p>And so there's information on how to do that here.</p>
+                        <p>Okay. So you will need that because there's going to be assignments.</p>
+                        <p>In fact, this course is very project based.</p>
+                        <p>So there's a lot of things that you're going to be doing in Microsoft office that's due.</p>
+                        <p>You can see here, I'm kind of talking about what the course is about. It introduces you to computer and information systems.</p>
+                        <p>We'll talk about hardware, software, all of that fun stuff.</p>
+                        <p>And it's really intended for both majors and non-majors alike, especially for those of you who want to improve their digital literacy skills.</p>
+                        <p>So these are the course learning outcomes here.</p>
+                        <p>This is a three unit course. And this is what's called a partially online course.</p>
+                        <p>What that means is that there are no required class meetings, but there's due dates for all your work.</p>
+                        <p>Okay.</p>
+                        <p>And I'll be talking about the due dates a little later.</p>
+                        <p>And I want to point out here that this is not a self-paced class.</p>
+                        <p>If you're looking for a self-paced class, this may not be the one for you.</p>
+                        <p>In fact, there is a self-paced version of this class that you could sign up for if you want.</p>
+                        <p>The instructor for that is Joel Penis. Okay?</p>
+                        <p>You can contact him if you're interested in that.</p>
+                        <p>In terms of communication, there's multiple ways of communicating with me.</p>
+                        <p>Probably the best way is through Canvas inbox, although I'm pretty good about email as well.</p>
+                        <p>Um, and I try to reply within 24 hours during the week.</p>
+                        <p>It gets a little spotty on the weekends.</p>
+                        <p>And there's also a course Q and a discussion forum where you can ask questions for the entire class.</p>
+                        <p>That you may have, I want to go to the discussion board and show that to you.</p>
+                        <p>So here under discussions, I have a course Q and a discussion here.</p>
+                        <p>I also have a student lounge, which I'll talk about in a moment.</p>
+                        <p>But the course Q and a discussion is really for you to ask questions that you may have that the entire class can benefit from.</p>
+                        <p>I'm more than happy to help you with things, but I also know that there's a lot of you who are very knowledgeable that could help your classmates out and I encourage you to do so.</p>
+                        <p>I also have here a student lounge, which is kind of an informal place for you to get to know one another and help each other out.</p>
+                        <p>But this is also a place where you could potentially form study groups if you want it to.</p>
+                        <p>Okay. So let's go back to the syllabus.</p>
+                        <p>Let's go back to the modules.</p>
+                        <p>Okay. So let's talk about what is due for this class.</p>
+                        <p>You'll notice here that I have things organized by week.</p>
+                        <p>So I will be publishing the week's work every Monday morning.</p>
+                        <p>And everything is due Sunday night at midnight, or 1159 to be precise.</p>
+                        <p>Okay. So I do have a late policy where if you can't get it in by the due date, you do have a seven day grace period, but there is a 10% penalty per day for each day that it is late.</p>
+                        <p>Now, I will say this, if you're struggling to make a deadline, please let me know and we can work something out.</p>
+                        <p>I'm more than happy to do that, but you have to let me know beforehand.</p>
+                        <p>Okay. So just a heads up on that.</p>
+                        <p>Um, this is a breakdown of all the points in the class and how things are graded.</p>
+                        <p>So you can take a look at that as well.</p>
+                        <p>Okay. So let me go back to the modules and let's take a look at week number one.</p>
+                        <p>So the only assignment for this week is to introduce yourself to the class.</p>
+                        <p>So there is an introduced yourself discussion forum here, and I'm asking you to do two things.</p>
+                        <p>First is to do your initial posts by Friday, September 5th at midnight.</p>
+                        <p>And then your replies to at least two of your classmates are due by Monday, September 8th at midnight.</p>
+                        <p>And the reason why I have two separate due dates is because I want to give everyone a chance to respond to one another.</p>
+                        <p>I've had it in the past where some students will do everything at the last minute and that's not really fair for those of you who have posted early and are waiting for someone to reply to their posts.</p>
+                        <p>So that's why there are two separate due dates.</p>
+                        <p>You'll also notice here that there's a getting started quiz that you could take.</p>
+                        <p>It's not for a grade, but it's really to help you with navigating Canvas.</p>
+                        <p>There's a textbook I talked about.</p>
+                        <p>This is where you'll find the course lectures.</p>
+                        <p>And I will have at least one lecture per week that's posted here.</p>
+                        <p>And as I mentioned before, there's a course Q and a discussion forum and the student lounge.</p>
+                        <p>In addition, I'm providing you with some additional resources.</p>
+                        <p>These are all optional, of course, but for those of you who are new to Canvas, you may want to check this out.</p>
+                        <p>This is a student guide.</p>
+                        <p>And I also want to talk about engages online system because we will be using that for some of our assignments.</p>
+                        <p>And the reason why is because it provides instant feedback.</p>
+                        <p>I'm not gonna say too much more about it right now, because there aren't any assignments that are engages online system.</p>
+                        <p>And when we get to it, I'll talk more about how to navigate and do work within the engages online system.</p>
+                        <p>Okay.</p>
+                        <p>Cause it's not always straightforward.</p>
+                        <p>Sometimes it's a two.</p>
+                        <p>Okay.</p>
+                        <p>Like I said, that only assignment this week is introduced yourself.</p>
+                        <p>It's.</p>
+                        <p>20 points.</p>
+                        <p>It's basically 10 points for your introduction and five points each for, um, responding to classmates posts.</p>
+                        <p>If you have any questions, please feel free to reach out to me.</p>
+                        <p>I am here to help and I'm looking forward to working with all of you this semester.</p>
+                        <p>I'm going to try to make this class as fun and as interesting as I can.</p>
+                        <p>Cause I know it can be a little dry.</p>
+                        <p>So, um, if you can give me some feedback on how to make it better, I'm more than open to that.</p>
+                        <p>All right. I will talk to you later. Bye.</p>
                     </div>
                 </details>
             </section>
@@ -118,5 +198,4 @@
     </script>
 </body>
 </html>
-
 
