--- a/csc104-welcome.html
+++ b/csc104-welcome.html
@@ -34,8 +34,8 @@
                 <h2 id="video-heading" class="text-2xl font-semibold mb-4">Welcome Video</h2>
                 
                 <!-- Responsive YouTube Embed -->
-                <div class="aspect-w-16 aspect-h-9 w-full">
-                    <iframe class="w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/0MQKB17cNO4?si=BJdseVXYG3c3wnKq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="w-full">
+                    <iframe class="w-full aspect-video rounded-lg shadow-lg" src="https://www.youtube.com/embed/0MQKB17cNO4?si=BJdseVXYG3c3wnKq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </section>
 
@@ -198,4 +198,5 @@
     </script>
 </body>
 </html>
+
 
