--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
         <li><a href="csc104-syllabus.html">Syllabus</a></li>
         <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
+        <ul>
+            <li>WEEK 2</li>
+            <ul>
+                <li><a href="csc104-wk2-file-mgmt.html">Week 2 Overview</a></li>
+            </ul>
+        
+        </ul>
 
     </div>
 
