--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
         <ul>
+            <li>WEEK 3</li>
+            <ul>
+                <li><a href="csc104-wk3-research-paper.html">Week 3 Overview</a></li>
+            </ul>
+        
+        </ul>
+         <ul>
             <li>WEEK 2</li>
             <ul>
                 <li><a href="csc104-wk2-file-mgmt.html">Week 2 Overview</a></li>
