--- a/csc104-wk4-business-letter.html
+++ b/csc104-wk4-business-letter.html
@@ -51,18 +51,18 @@
             <div class="flex flex-col lg:flex-row gap-8">
                 <!-- Video Column -->
                 <section class="w-full lg:w-2/3">
-                    <div class="aspect-video bg-black rounded-lg overflow-hidden">
+                    <div class="aspect-video bg-black rounded-lg overflow-hidden sticky top-8">
                         <iframe id="youtube-player" src="https://www.youtube.com/embed/Cc8GYIIL9gA?enablejsapi=1" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="w-full h-full"></iframe>
                     </div>
                 </section>
 
                 <!-- Transcript Column -->
-                <section class="w-full lg:w-1/3 flex">
-                    <details class="border border-[#EADDD7] rounded-lg open w-full flex flex-col">
+                <section class="w-full lg:w-1/3 flex flex-col">
+                    <details class="border border-[#EADDD7] rounded-lg open w-full flex flex-col flex-grow">
                         <summary role="button" aria-expanded="true" class="p-4 font-bold text-xl cursor-pointer list-none focus:outline-none focus:ring-2 focus-ring-theme rounded-t-lg hover:bg-[#F0EBE8]">
                             Video Transcript
                         </summary>
-                        <div id="transcript-content" class="transcript-content p-4 border-t border-[#EADDD7] max-h-80 lg:max-h-none flex-grow overflow-y-auto">
+                        <div id="transcript-content" class="transcript-content p-4 border-t border-[#EADDD7] flex-grow overflow-y-auto" style="max-height: 56vh;">
                             <p data-start="0.04" tabindex="0" class="p-2 cursor-pointer rounded transition-colors duration-200 hover:bg-[#F0EBE8] focus:outline-none focus:ring-2 focus-ring-theme"><span class="font-bold text-sm block">00:00</span> Aloha and welcome to week four it's about word business letters but before</p>
                             <p data-start="7.62" tabindex="0" class="p-2 cursor-pointer rounded transition-colors duration-200 hover:bg-[#F0EBE8] focus:outline-none focus:ring-2 focus-ring-theme"><span class="font-bold text-sm block">00:07</span> we talk about that I just want to take a step back and talk about a little bit about</p>
                             <p data-start="13.32" tabindex="0" class="p-2 cursor-pointer rounded transition-colors duration-200 hover:bg-[#F0EBE8] focus:outline-none focus:ring-2 focus-ring-theme"><span class="font-bold text-sm block">00:13</span> Splashtop so if you're on a Chromebook please use Splashtop and what Splashtop</p>
