Add Week 5 section to index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
         <ul>
+            <li>WEEK 5</li>
+            <ul>
+                <li><a href="csc104-wk5-multipage.html">Week 5 Overview</a></li>
+            </ul>
+        
+        </ul>
+        <ul>
             <li>WEEK 4</li>
             <ul>
                 <li><a href="csc104-wk4-business-letter.html">Week 4 Overview</a></li>
