Add Week 6 section to index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         <li><a href="csc104-syllabus.html">Syllabus</a></li>
         <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
+         <ul>
+            <li>WEEK 6</li>
+            <ul>
+                <li><a href="csc104-wk5-multipage.html">Week 5 Overview</a></li>
+                <li><a href="csc104-word-project.html">MS Word Project</a></li>
+            </ul>
+        
+        </ul>
         <ul>
             <li>WEEK 5</li>
             <ul>
