Update links for Week 6 in index.html

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
          <ul>
             <li>WEEK 6</li>
             <ul>
-                <li><a href="csc104-wk5-multipage.html">Week 5 Overview</a></li>
-                <li><a href="csc104-word-project.html">MS Word Project</a></li>
+                <li><a href="csc104-wk6-resume-project.html">Week 6 Overview</a></li>
+                
             </ul>
         
         </ul>
