Add Week 7 section to index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
          <ul>
+            <li>WEEK 7</li>
+            <ul>
+                <li><a href="csc104-wk7-worksheet.html">Week 7 Overview</a></li>
+                
+            </ul>
+        
+        </ul>
+         <ul>
             <li>WEEK 6</li>
             <ul>
                 <li><a href="csc104-wk6-resume-project.html">Week 6 Overview</a></li>
