--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         <li><a href="csc104-syllabus.html">Syllabus</a></li>
         <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
+        <ul>
+            <li>WEEK 8</li>
+            <ul>
+                <li><a href="csc104-wk7-excel-example.html">Week 8: Example Project</a></li>
+                
+            </ul>
+        
+        </ul>
          <ul>
             <li>WEEK 7</li>
             <ul>
