Add Week 9 resources to index.html
Added Week 9 section with links to resources.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
         <ul>
+            <li>WEEK 9</li>
+            <ul>
+                <li><a href="csc104-wk9-large-worksheet.html">Week 9: Large Worksheet and What-If</a></li>
+                
+            </ul>
+        
+        </ul>
+        <ul>
             <li>WEEK 8</li>
             <ul>
                 <li><a href="csc104-wk8-excel-example.html">Week 8: Example Project</a></li>
