--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
         <ul>
+            <li>WEEK 10</li>
+            <ul>
+                <li><a href="csc104-wk10-intro.html">Week 10: Financial Functions, Data Tables, and Amoritization</a></li>
+                
+            </ul>
+        
+        </ul>
+        <ul>
             <li>WEEK 9</li>
             <ul>
                 <li><a href="csc104-wk9-large-worksheet.html">Week 9: Large Worksheet and What-If</a></li>
