Add Week 11 Excel Project Assignment link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
         <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
         <ul>
+            <li>WEEK 11</li>
+            <ul>
+                <li><a href="csc104-excel-project-assign.html">Week 11: Excel Project Assignment</a></li>
+                
+            </ul>
+        
+        </ul>
+        <ul>
             <li>WEEK 10</li>
             <ul>
                 <li><a href="csc104-wk10-intro.html">Week 10: Financial Functions, Data Tables, and Amoritization</a></li>
