Add hyperlink to starter file in HTML

--- a/csc104-excel-project-assign.html
+++ b/csc104-excel-project-assign.html
@@ -78,7 +78,7 @@ details[open] summary {
 <section>
 <div class="sub-heading">Required Files</div>
 <ul class="list-disc ml-6">
-<li>Starter File: coastal_coffee_starter.xlsx</li><li>Submission File: LastName_FirstName_Coffee.xlsx</li>
+<li>Starter File: <a href="files/coastal_coffee_starter.xlsx">coastal_coffee_starter.xlsx</a></li><li>Submission File: LastName_FirstName_Coffee.xlsx</li>
 </ul>
 </section>
 
