--- a/csc104-excel-project-assign.html
+++ b/csc104-excel-project-assign.html
@@ -60,8 +60,12 @@ details[open] summary {
 </head>
 <body class="antialiased">
 <main class="max-w-3xl mx-auto p-4 md:p-8 bg-white rounded shadow">
-<h1></h1>
-<h2>CSC 104: Computers and Computer Applications | Time Allowed: 90 minutes | Total Points: 100</h2>
+<h1 class="text-3xl md:text-4xl font-bold text-blue-800 text-center mb-4">
+  CSC 104 Excel Project | Estimated Time: 90 minutes | Total Points: 100 x 2 = 200
+</h1>
+<h2 class="text-lg md:text-xl text-green-700 italic text-center mb-8">
+  Excel Summary Assessment: Coastal Coffee Shop Quarterly Analysis
+  </h2>
 
 <section>
 <div class="sub-heading">Scenario</div>
