Enhance link styling for starter file in HTML

--- a/csc104-excel-project-assign.html
+++ b/csc104-excel-project-assign.html
@@ -82,7 +82,15 @@ details[open] summary {
 <section>
 <div class="sub-heading">Required Files</div>
 <ul class="list-disc ml-6">
-<li>Starter File: <a href="files/coastal_coffee_starter.xlsx">coastal_coffee_starter.xlsx</a></li><li>Submission File: LastName_FirstName_Coffee.xlsx</li>
+<li>Starter File: 
+  <a href="files/coastal_coffee_starter.xlsx" 
+     class="text-blue-700 underline font-semibold" 
+     target="_blank" 
+     rel="noopener">
+    coastal_coffee_starter.xlsx
+  </a>
+</li>
+<li>Submission File: LastName_FirstName_Coffee.xlsx</li>
 </ul>
 </section>
 
