Correct anchor tag syntax in index.html
Fix typo in anchor tag for Excel Project Intro page.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>WEEK 11</li>
             <ul>
                 <li><a href="csc104-excel-project-assign.html">Week 11: Excel Project Assignment</a></li>
-                
+                <li><a href="csc104-wk11-project-intro.html">Excel Project Intro page</a)</li>
             </ul>
         
         </ul>
