--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
         <li><a href="csc104-welcome.html">Welcome Page</a></li>
       </ul>
         <ul>
+            <li>WEEK 13</li>
+            <ul>
+                <li><a href="csc104-wk13-intro.html">Week 13: Intro</a)</li>
+            </ul>
+        </ul>
+        <ul>
             <li>WEEK 12</li>
             <ul>
                 <li><a href="csc104-wk12-intro.html">Week 12: Intro</a)</li>
