--- a/csc104-syllabus-26-spring.html
+++ b/csc104-syllabus-26-spring.html
@@ -389,7 +389,7 @@
     <header>
         <div class="container">
             <h1>CSC104: Computers and Computer Applications</h1>
-            <p class="course-subtitle">Online Course - No Synchronous Meetings Required</p>
+            <p class="course-subtitle">2026 Spring: Hybrid Course - Tuesdays, 1:30 PM to 3:15 PM</p>
             <div style="margin-top: 1.5rem;">
                 <button class="btn" onclick="downloadSyllabusAsPDF()">
                     📄 Download Syllabus (PDF)
